--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "dist"
-          target: "test"
+          source: "."
+          target: "~/app/node-gobarber-deploy"
       
       #Copiar a pasta dist para dentro da Digital Ocean
       #Substituir o código existente na pasta "dist" pelo novo código
