--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run build
         run: yarn build
         
+      #Copiar o código para dentro da Digital Ocean
       - name: Copy dist to Digital Ocean
         uses: appleboy/scp-action@master
         with:
@@ -34,11 +35,9 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "."
+          source: ".,!node_modules"
           target: "~/app/node-gobarber-deploy"
       
-      #Copiar a pasta dist para dentro da Digital Ocean
-      #Substituir o código existente na pasta "dist" pelo novo código
       #Executar "yarn" na Digital Ocean
       #Executar as migrations do TypeORM
       #Restart no servidor Node.js
