--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,9 @@ jobs:
           target: "~/app/node-gobarber-deploy"
           
       #Executar "yarn" na Digital Ocean
-      - name: Install dependencies on Digital Ocean
+      #Restart no servidor Node.js       
+      #Executar as migrations do TypeORM
+      - name: Run production scripts
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -49,25 +51,7 @@ jobs:
           script: |
             cd ~/app/node-gobarber-deploy
             yarn
-            
-      #Executar as migrations do TypeORM
-      - name: Run migrations on Digital Ocean
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            cd ~/app/node-gobarber-deploy
             ./node_modules/.bin/typeorm migration:run
+            pm2 restart gobarber-api
       
-      #Restart no servidor Node.js
-      - name: Run migrations on Digital Ocean
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: pm2 restart gobarber-api
+ 
